fixed the gap in the modal

--- a/client/Components/menu_item_modal/menu_item_modal.css
+++ b/client/Components/menu_item_modal/menu_item_modal.css
@@ -63,7 +63,7 @@
 }
 
 .modal-menu-item {
-    width: 100%;
+    width: 101%;
     height: 250px;
     position: relative;
     background-size: cover;
